--- a/index-START.html
+++ b/index-START.html
@@ -61,7 +61,11 @@
 <script>
 
 window.addEventListener('keydown', function(e) {
-  const audio = document.querySelector('audio[data-key=${e.keyCode}65')
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  if(!audio) return; //stop function from running all together
+  audio.currentTime = 0; //rewind to the start
+  audio.play();
 });
 
 
